other/copy-namespace-labels/.chainsaw-test/baddeployment.yaml
#Outside Namespace, deployment with owner label and kubernetes.io/metadata.name label
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-with-ouside-ns
  namespace: without-ns
  labels:
    app: my-app
    tier: frontend
spec:
  replicas: 1  
  selector:
    matchLabels:
      app: my-app
      tier: frontend
  template:
    metadata:
      labels:
        app: my-app
        tier: frontend
        owner: "any-corp"   
        kubernetes.io/metadata.name: "pod-with-owner-and-metadata-name"
    spec:
      containers:
        - name: bad-deploy-outside-ns
          image: nginx:1.25
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bad-deployment
  namespace: within-ns
  labels:
    app: bad-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bad-app
  template:
    metadata:
      labels:
        app: bad-app
    spec:
      containers:
      - name: bad-app-deploy
        image: nginx:1.25
