other/copy-namespace-labels/.chainsaw-test/gooddeployment.yaml
#Within Namespace, with Owner Label and additional labels
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-with-ns
  namespace: within-ns
  labels:
    app: good-app
    owner: "any-corp"  
    env: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: good-app
  template:
    metadata:
      labels:
        app: good-app
        env: dev
        owner: "any-corp"
    spec:
      containers:
        - name: good-app-deploy
          image: nginx:1.25
