other/copy-namespace-labels/.chainsaw-test/goodpod.yaml
#Within Namespace, Access to Pod with Owner Label 
apiVersion: v1
kind: Pod
metadata:
  name: pod-with-owner-label
  namespace: within-ns
  labels:
    app: my-app
    owner: "any-corp"
    tier: frontend
spec:
  containers:
    - name: goodpod01
      image: nginx:1.25
---
#Within Namespace, Pod with owner label and kubernetes.io/metadata.name label
apiVersion: v1
kind: Pod
metadata:
  name: pod-with-owner-and-metadata-name
  namespace: within-ns
  labels:
    owner: "any-corp"
    kubernetes.io/metadata.name: "pod-with-owner-and-metadata-name"
spec:
  containers:
  - name: goodpod02
    image: nginx:1.25
---
#Within Namespace, Pod with multiple Labels but without owner label
apiVersion: v1
kind: Pod
metadata:
  name: pod-with-labels-no-owner
  namespace: myns
  labels:
    app: "myapp"
    environment: dev
spec:
  containers:
  - name: goodpod03
    image: nginx:1.25
