other/copy-namespace-labels/.chainsaw-test/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: within-ns
  labels:
    owner: "any-corp"  
    env: dev
---
apiVersion: v1
kind: Namespace
metadata:
  name: without-ns
  labels:
    owner: "any-corp"
