other/copy-namespace-labels/.chainsaw-test/policy-ready.yaml
apiVersion: kyverno.io/v1          
kind: ClusterPolicy
metadata:
  name: copy-namespace-labels
status:
  ready: true
