other/copy-namespace-labels/.chainsaw-test/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: copy-namespace-labels
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: ../copy-namespace-labels.yaml
    - assert:
        file: policy-ready.yaml
  - name: step-02
    try:
    - apply:
        file: gooddeployment.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: baddeployment.yaml
